--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@ function MM_preloadImages() { //v3.0
 <!-- Start Cookie Plugin -->
 <script type="text/javascript">
   window.cookieconsent_options = {
-  message: 'Diese Website nutzt Cookies, um bestmögliche Funktionalität bieten zu können.',
+  message: 'Diese Website nutzt Cookies, um bestmÃ¶gliche FunktionalitÃ¤t bieten zu kÃ¶nnen.',
   dismiss: 'Ok, verstanden',
   learnMore: 'Mehr Infos',
-  link: 'http://members.aon.at/trautesheim/Impressum.html',
+  link: 'https://trautesheim.github.io/Impressum.html',
   theme: 'dark-bottom'
  };
 </script>
