--- a/Aktuelles.html
+++ b/Aktuelles.html
@@ -36,6 +36,6 @@ body,td,th {
 <p align="center" class="Stil12">Skigebiets-Infos</p>
 <p><img name="Liftstatus" src="http://sdds4.intermaps.com/zillertal/zillertalarena_skimap_touch.jpg?var=6,541079E-02" width="1080" height="720" alt=""></p>
 <p align="center" class="Stil12">Sommer-Infos</p>
-<p align="center"><img name="Sommer" src="https://www.zillertalarena.com/fileadmin/user_upload/downloads/pdf/Zillertal_Arena_Sommerpanorama.pdf" width="1080" height="720" alt=""></p>
+<p align="center"><img name="Sommer" src="https://vcdn.bergfex.at/images/resized/13/33707391ef401e13_6a8265f4f75179d3@2x.jpg" width="1080" height="720" alt=""></p>
 </body>
 </html>
