--- a/Aktuelles.html
+++ b/Aktuelles.html
@@ -34,7 +34,7 @@ body,td,th {
   </tr>
 </table>
 <p align="center" class="Stil12">Skigebiets-Infos</p>
-<p><img name="Liftstatus" src="http://sdds4.intermaps.com/zillertal/zillertalarena_skimap_touch.jpg" width="1080" height="720" alt=""></p>
+<p align="center"><img name="Liftstatus" src="http://sdds4.intermaps.com/zillertal/zillertalarena_skimap_touch.jpg" width="1080" height="720" alt=""></p>
 <p align="center" class="Stil12">Sommer-Infos</p>
 <p align="center"><img name="Sommer" src="https://vcdn.bergfex.at/images/resized/13/33707391ef401e13_6a8265f4f75179d3@2x.jpg" width="1080" height="720" alt=""></p>
 </body>
