--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ function MM_preloadImages() { //v3.0
 <body>
 <form action="" method="post" name="form1" class="Stil1">
   <div align="center">
-    <div align="left"><span class="Stil19"><a href="http://translate.google.com/translate?depth=1&nv=1&rurl=translate.google.com&sl=de&tl=en&u=http://members.aon.at/trautesheim/index.html"><img src="english.jpg" alt="" name="English" width="30" height="30" border="0"><span class="Stil24">English</span></a></span></div>
+    <div align="left"><span class="Stil19"><a href="https://translate.google.com/translate?depth=1&nv=1&rurl=translate.google.com&sl=de&tl=en&u=https://trautesheim.github.io/index.html"><img src="english.jpg" alt="" name="English" width="30" height="30" border="0"><span class="Stil24">English</span></a></span></div>
     <h1 class="Stil16"><em><u>Willkommen in unserer keinen Pension Trautes Heim    </u></em><u><em>Gerlos Zillertal Arena </em></u></h1>
   </div>
 </form>
