--- a/Kontakt.html
+++ b/Kontakt.html
@@ -55,8 +55,8 @@ body {
     </tr>
   </table>
   </p>
-  <iframe width="700" height="300" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.at/maps?f=q&amp;source=s_q&amp;hl=de&amp;geocode=&amp;q=Trautes+Heim+Gerlos+218&amp;aq=&amp;sll=47.227073,12.041981&amp;sspn=0.004109,0.006899&amp;t=h&amp;ie=UTF8&amp;hq=Trautes+Heim+Gerlos+218&amp;hnear=&amp;cid=473799938667717525&amp;ll=47.227088,12.041745&amp;spn=0.008743,0.030084&amp;z=17&amp;iwloc=A&amp;output=embed"></iframe><br />
-  <small><a href="http://maps.google.at/maps?f=q&amp;source=embed&amp;hl=de&amp;geocode=&amp;q=Trautes+Heim+Gerlos+218&amp;aq=&amp;sll=47.227073,12.041981&amp;sspn=0.004109,0.006899&amp;t=h&amp;ie=UTF8&amp;hq=Trautes+Heim+Gerlos+218&amp;hnear=&amp;cid=473799938667717525&amp;ll=47.227088,12.041745&amp;spn=0.008743,0.030084&amp;z=15&amp;iwloc=A" class="Stil6" style="color:#0000FF;text-align:left">Routenplaner Anreise Trautes Heim Gerlos Zillertal Arena</a></small></div>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2490.7297334937343!2d12.039570515447352!3d47.22710097916139!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4777c6c2ad0ffc85%3A0x6934688aee42395!2sTrautes%20Heim!5e1!3m2!1sde!2sat!4v1614339771961!5m2!1sde!2sat" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe><br />
+  <small><a href="https://goo.gl/maps/Aoy4cHz3CvZke7YS6" class="Stil6" style="color:#0000FF;text-align:left">Routenplaner Anreise Trautes Heim Gerlos Zillertal Arena</a></small></div>
   <p align="center" class="Stil13">Trautes Heim</p>
   <p align="center" class="Stil13">Familie Egger-Danzl</p>
   <p align="center" class="Stil13">6281 Gerlos 218</p>
