--- a/Kontakt.html
+++ b/Kontakt.html
@@ -48,8 +48,8 @@ body {
     <tr>
       <td width="80" height="40"><div align="center"><strong><a href="index.html" class="Stil13">Home</a></strong></div></td>
       <td width="99"><div align="center"><strong><a href="Zimmer.html" class="Stil13">Zimmer</a></strong></div></td>
-      <td width="82"><div align="center"><a href="Preis.html" class="Stil10"><strong><span class="Stil9"></u><span class="Stil12">Preise</span></span></a></div></td>
-      <td width="204"><div align="center"><strong><a href="Kontakt.html" class="Stil13">Kontakt Anreise </a></strong></div></td>
+      <td width="82"><div align="center"><strong><a href="Preis.html" class="Stil13">Preise</a></strong></div></td>
+      <td width="204"><div align="center"><strong><a href="Kontakt.html" class="Stil13">Kontakt Anreise</a></strong></div></td>
       <td width="142"><div align="center"><strong><a href="Aktuelles.html" class="Stil13">Aktuelles</a></strong></div></td>
       <td width="91"><a href="Impressum.html" class="Stil14">Impressum Datenschutz</a></td>
     </tr>
