--- a/Aktuelles.html
+++ b/Aktuelles.html
@@ -30,7 +30,7 @@ body,td,th {
 <table width="683" height="52" border="2" align="center">
   <tr>
     <th class="Stil1" scope="col"><a href="index.html" class="Stil4">Home</a></th>
-    <th scope="col"><span class="Stil7"><a href="Webcams Zillertalarena.html">Webcams Zillertalarena</a></span> </th>
+    <th scope="col"><span class="Stil7"><a href="Webcams Zillertalarena.html">Webcams1 Zillertalarena</a></span> </th>
   </tr>
 </table>
 <p align="center" class="Stil12">Skigebiets-Infos</p>
