--- a/index.html
+++ b/index.html
@@ -103,11 +103,12 @@ function MM_preloadImages() { //v3.0
 </div>
     <table width="1000" border="2" align="center">
   <tr>
-    <th scope="col"><div align="center"><span class="Stil17"><span class="Stil26">Trautes Heim, 6281 Gerlos 218, E-mail:</span> <a href="mailto:trautesheim-gerlos@hotmail.com">trautesheim-gerlos@hotmail.com </a></span></div></th>
+    <th scope="col"><div align="center"><span class="Stil17"><span class="Stil26">Trautes Heim, 6281 Gerlos 218, Tel: +43, E-mail:</span> <a href="mailto:trautesheim-gerlos@hotmail.com">trautesheim-gerlos@hotmail.com </a></span></div></th>
   </tr>
 </table>
 <p class="Stil3">&nbsp;</p>
 </body>
 
 </html>
+
 
