--- a/Kontakt.html
+++ b/Kontakt.html
@@ -60,7 +60,7 @@ body {
   <p align="center" class="Stil13">Trautes Heim</p>
   <p align="center" class="Stil13">Familie Egger-Danzl</p>
   <p align="center" class="Stil13">6281 Gerlos 218</p>
-  <p align="center" class="Stil13">Tel: +43 5284 5262</p>
+  <p align="center" class="Stil13">Tel: +4367763055364</p>
 <p align="center" class="Stil6"><a href="mailto:trautesheim-gerlos@hotmail.com">E-mail: trautesheim-gerlos@hotmail.com</a></p>
 <p align="center">&nbsp;</p>
 <div>
@@ -72,3 +72,4 @@ body {
 </div>
 </body>
 </html>
+
