--- a/Impressum.html
+++ b/Impressum.html
@@ -183,13 +183,14 @@ body {
   <p align="center" class="Stil8">Trautes Heim</p>
   <p align="center" class="Stil8">Familie Egger-Danzl</p>
   <p align="center" class="Stil8">6281 Gerlos 218</p>
-  <p align="center" class="Stil8">Tel: +4367763055364</p>
+  <p align="center" class="Stil8">Tel:<a href="tel: 4367763055364"> 4367763055364</a></p>
   <p align="center" class="Stil8">E-mail: trautesheim-gerlos@hotmail.com     </p>
 </div>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 </body>
 </html>
+
 
 
 
