--- a/Zimmer.html
+++ b/Zimmer.html
@@ -61,12 +61,13 @@ body {
 </div>
 <table width="797" height="67" border="2" align="center">
   <tr>
-    <th height="44" scope="col"><p class="Stil9"><span class="Stil12">Trautes Heim 6281 Gerlos 218 Tel:<a href="tel: 4367763055364"> 4367763055364</a> E-mail:</span> </p>
+    <th height="44" scope="col"><p class="Stil9"><span class="Stil12">Trautes Heim 6281 Gerlos 218 Tel:<a href="tel: +4367763055364"> +4367763055364</a> E-mail:</span> </p>
     <p class="Stil9"><a href="mailto:trautesheim-gerlos@hotmail.com" class="Stil14">trautesheim-gerlos@hotmail.com </a></p></th>
   </tr>
 </table>
 <p>&nbsp;</p>
 </body>
 </html>
+
 
 
