--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ function MM_preloadImages() { //v3.0
     <div align="justify">
   </div>
 </div>
-    <table width="1000" border="2" align="center">
+    <table width="797" height="67"  border="2" align="center">
   <tr>
     <th scope="col"><div align="center"><span class="Stil17"><span class="Stil26">Trautes Heim 6281 Gerlos 218 Tel:<a href="tel: +4367763055364"> +4367763055364</a> E-mail:</span> <a href="mailto:trautesheim-gerlos@hotmail.com">trautesheim-gerlos@hotmail.com </a></span></div></th>
   </tr>
@@ -110,6 +110,7 @@ function MM_preloadImages() { //v3.0
 </body>
 
 </html>
+
 
 
 
